Docker build fix and GetPackages method for admin ui

--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Client/ClusterKit.NodeManager.Client.csproj
@@ -129,6 +129,9 @@
     <Compile Include="Installer.cs" />
     <Compile Include="Messages\NodeDescription.cs" />
     <Compile Include="Messages\NodeDescriptionRequest.cs" />
+    <Compile Include="Messages\PackageDescription.cs" />
+    <Compile Include="Messages\PackageListRequest.cs" />
+    <Compile Include="Messages\ReloadPackageListRequest.cs" />
     <Compile Include="Messages\ShutdownMessage.cs" />
     <Compile Include="NodeManagerReceiverActor.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
