--- a/Docker/ClusterKitWorker/Dockerfile
+++ b/Docker/ClusterKitWorker/Dockerfile
@@ -3,6 +3,7 @@ MAINTAINER Mikhail Kantarovskiy <kantoramob@gmail.com>
 WORKDIR /opt/clusterkit/
 COPY build/* /opt/clusterkit/
 COPY packageCache/* /opt/packageCache/
+COPY ["ClusterKit.NodeManager.Launcher.exe.config", "./"]
 CMD bash ./start.sh
 
 
