--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/packages.config
@@ -32,7 +32,9 @@
   <package id="Microsoft.Owin.Host.HttpListener" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
+  <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
+  <package id="NuGet.Core" version="2.10.1" targetFramework="net45" />
   <package id="Owin" version="1.0" targetFramework="net46" />
   <package id="Serilog" version="1.5.14" targetFramework="net46" />
   <package id="System.Collections" version="4.0.0" targetFramework="net46" />
