Cluster upgrade - first approach

--- a/nuget.config
+++ b/nuget.config
@@ -6,5 +6,7 @@
   <packageSources>
     <add key="nuget.org" value="https://api.nuget.org/v3/index.json" />
     <add key="local" value="./packageOut" />
+    <add key="Akka" value="https://www.myget.org/F/akkadotnet/api/v2" />
+
   </packageSources>
 </configuration>
