--- a/ClusterKit.Core/ClusterKit.Core.Rest/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.Rest/packages.config
@@ -1,7 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.6" targetFramework="net46" />
+  <package id="Akka" version="1.0.7.178-beta" targetFramework="net45" />
   <package id="JetBrains.Annotations" version="10.1.2-eap" targetFramework="net46" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net45" />
+  <package id="System.Collections" version="4.0.0" targetFramework="net45" />
+  <package id="System.Collections.Immutable" version="1.1.37" targetFramework="net45" />
+  <package id="System.Diagnostics.Debug" version="4.0.0" targetFramework="net45" />
+  <package id="System.Globalization" version="4.0.0" targetFramework="net45" />
+  <package id="System.Linq" version="4.0.0" targetFramework="net45" />
+  <package id="System.Resources.ResourceManager" version="4.0.0" targetFramework="net45" />
   <package id="System.Runtime" version="4.0.0" targetFramework="net46" />
+  <package id="System.Runtime.Extensions" version="4.0.0" targetFramework="net45" />
+  <package id="System.Threading" version="4.0.0" targetFramework="net45" />
 </packages>
