--- a/ClusterKit.Core/ClusterKit.Core.Service/App.config
+++ b/ClusterKit.Core/ClusterKit.Core.Service/App.config
@@ -49,6 +49,10 @@
         <assemblyIdentity name="Topshelf" publicKeyToken="b800c4cfcdeea87b" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-3.3.154.0" newVersion="3.3.154.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.37.0" newVersion="1.1.37.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
 </configuration>
