--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/app.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/app.config
@@ -18,6 +18,10 @@
         <assemblyIdentity name="Serilog" publicKeyToken="24c2f752a8e58a10" culture="neutral" />
         <bindingRedirect oldVersion="0.0.0.0-1.5.0.0" newVersion="1.5.0.0" />
       </dependentAssembly>
+      <dependentAssembly>
+        <assemblyIdentity name="System.Collections.Immutable" publicKeyToken="b03f5f7f11d50a3a" culture="neutral" />
+        <bindingRedirect oldVersion="0.0.0.0-1.1.37.0" newVersion="1.1.37.0" />
+      </dependentAssembly>
     </assemblyBinding>
   </runtime>
   <entityFramework>
