--- a/ClusterKit.Core/ClusterKit.Core.EF/ClusterKit.Core.EF.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.EF/ClusterKit.Core.EF.csproj
@@ -137,14 +137,17 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="BaseConnectionManager.cs" />
-    <Compile Include="BaseCrudActor.cs" />
-    <Compile Include="BaseCrudActorWithNotifications.cs" />
+    <Compile Include="BaseContextFactory.cs" />
     <Compile Include="BaseEntityFrameworkInstaller.cs" />
+    <Compile Include="EntityDataFactory.cs" />
     <Compile Include="Installer.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
-    <Compile Include="UpdateMessage.cs" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ClusterKit.Core.Data\ClusterKit.Core.Data.csproj">
+      <Project>{0d6871d1-5a69-4533-ba4b-073b876232c5}</Project>
+      <Name>ClusterKit.Core.Data</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Core.Rest\ClusterKit.Core.Rest.csproj">
       <Project>{fda59712-9625-4cdf-b8fd-6df19960c8c0}</Project>
       <Name>ClusterKit.Core.Rest</Name>
