--- a/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
@@ -92,6 +92,14 @@
       <HintPath>..\..\packages\Castle.Windsor.3.3.0\lib\net45\Castle.Windsor.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="EntityFramework">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="EntityFramework.SqlServer">
+      <HintPath>..\..\packages\EntityFramework.6.1.3\lib\net45\EntityFramework.SqlServer.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
     <Reference Include="Google.ProtocolBuffers, Version=2.4.1.555, Culture=neutral, PublicKeyToken=55f7125234beb589, processorArchitecture=MSIL">
       <SpecificVersion>False</SpecificVersion>
       <HintPath>..\..\packages\Google.ProtocolBuffers.2.4.1.555\lib\net40\Google.ProtocolBuffers.dll</HintPath>
@@ -130,6 +138,7 @@
       <HintPath>..\..\packages\System.Collections.Immutable.1.1.37\lib\dotnet\System.Collections.Immutable.dll</HintPath>
       <Private>True</Private>
     </Reference>
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Configuration" />
     <Reference Include="System.Core" />
     <Reference Include="System.IO.Compression" />
@@ -163,6 +172,7 @@
     <Compile Include="AkkaTest\DeployerFallbackTest.cs" />
     <Compile Include="ConceptProof\AkkaClusterTest.cs" />
     <Compile Include="Configuration\ConfigurationTest.cs" />
+    <Compile Include="Data\ContextFactoryTest.cs" />
     <Compile Include="Ping\PingTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestUtils\CoreTestKitTests.cs" />
@@ -175,6 +185,22 @@
     <None Include="packages.config" />
   </ItemGroup>
   <ItemGroup>
+    <ProjectReference Include="..\ClusterKit.Core.Data\ClusterKit.Core.Data.csproj">
+      <Project>{0d6871d1-5a69-4533-ba4b-073b876232c5}</Project>
+      <Name>ClusterKit.Core.Data</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Core.EF.Npgsql\ClusterKit.Core.EF.Npgsql.csproj">
+      <Project>{452aa14f-7657-49d2-8da5-6a3058821217}</Project>
+      <Name>ClusterKit.Core.EF.Npgsql</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Core.EF\ClusterKit.Core.EF.csproj">
+      <Project>{17c1fc2c-f8e3-4d0c-9446-5fa6e4f4d71f}</Project>
+      <Name>ClusterKit.Core.EF</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\ClusterKit.Core.Rest\ClusterKit.Core.Rest.csproj">
+      <Project>{fda59712-9625-4cdf-b8fd-6df19960c8c0}</Project>
+      <Name>ClusterKit.Core.Rest</Name>
+    </ProjectReference>
     <ProjectReference Include="..\ClusterKit.Core.TestKit\ClusterKit.Core.TestKit.csproj">
       <Project>{33F25E93-E58E-4F90-A6EB-E7C64546D732}</Project>
       <Name>ClusterKit.Core.TestKit</Name>
