--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.ConfigurationSource/packages.config
@@ -10,6 +10,7 @@
   <package id="Castle.Core" version="3.3.3" targetFramework="net46" />
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.Data" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.EF" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.Rest" version="0.0.0.0-local" targetFramework="net45" />
   <package id="EntityFramework" version="6.1.3" targetFramework="net46" />
