--- a/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager.Tests/packages.config
@@ -14,8 +14,10 @@
   <package id="Castle.Windsor" version="3.3.0" targetFramework="net46" />
   <package id="ClusterKit.Core" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.Data" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.Data.TestKit" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.EF" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.EF.Npgsql" version="0.0.0.0-local" targetFramework="net45" />
+  <package id="ClusterKit.Core.EF.TestKit" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.Rest" version="0.0.0.0-local" targetFramework="net45" />
   <package id="ClusterKit.Core.TestKit" version="0.0.0.0-local" targetFramework="net45" />
   <package id="CommonServiceLocator" version="1.3" targetFramework="net46" />
@@ -37,7 +39,6 @@
   <package id="Microsoft.Owin.Hosting" version="3.0.1" targetFramework="net46" />
   <package id="Microsoft.Web.Infrastructure" version="1.0.0.0" targetFramework="net46" />
   <package id="Microsoft.Web.Xdt" version="2.1.1" targetFramework="net45" />
-  <package id="Moq" version="4.2.1510.2205" targetFramework="net45" />
   <package id="Newtonsoft.Json" version="8.0.2" targetFramework="net46" />
   <package id="Npgsql" version="3.0.5" targetFramework="net46" />
   <package id="NuGet.Core" version="2.10.1" targetFramework="net45" />
