Seeds are now extracted from nginx configurators and are not updated

--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -136,6 +136,7 @@
     <Compile Include="ActorSystemUtils.cs" />
     <Compile Include="BaseInstaller.cs" />
     <Compile Include="Cluster\ClusterLoggingActor.cs" />
+    <Compile Include="Cluster\SeederActor.cs" />
     <Compile Include="Configuration.Designer.cs">
       <AutoGen>True</AutoGen>
       <DesignTime>True</DesignTime>
