--- a/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
+++ b/ClusterKit.NodeManager/ClusterKit.NodeManager/ClusterKit.NodeManager.csproj
@@ -226,6 +226,7 @@
       <DependentUpon>Configuration.resx</DependentUpon>
     </Compile>
     <Compile Include="Messages\ActiveNodeDescriptionsRequest.cs" />
+    <Compile Include="Messages\AvailableTemplatesRequest.cs" />
     <Compile Include="Messages\NodeUpgradeRequest.cs" />
     <Compile Include="NodeManagerActor.cs" />
     <Compile Include="Installer.cs" />
