--- a/Docker/ClusterKitPublisher/ClusterKit.NodeManager.Launcher.exe.config
+++ b/Docker/ClusterKitPublisher/ClusterKit.NodeManager.Launcher.exe.config
@@ -8,7 +8,7 @@
     <add key="workingDirectory" value="/opt/node"/>
     <add key="stopMode" value="CleanRestart"/>
     <add key="stopAction" value="echo stopped"/>
-    <add key="containerType" value="seed"/>
+    <add key="containerType" value="publisher"/>
     <add key="fallbackConfiguration" value="fallBackConfiguration.json"/>
   </appSettings>
 </configuration>
