--- a/ClusterKit.Core/ClusterKit.Core.Data/ClusterKit.Core.Data.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.Data/ClusterKit.Core.Data.csproj
@@ -142,6 +142,7 @@
     <Compile Include="BaseCrudActorWithNotifications.cs" />
     <Compile Include="IContextFactory.cs" />
     <Compile Include="DataFactory.cs" />
+    <Compile Include="IDataSeeder.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UpdateMessage.cs" />
   </ItemGroup>
