Fixed nuget rights on linux / macos docker build

--- a/Docker/ClusterKitWorker/Dockerfile
+++ b/Docker/ClusterKitWorker/Dockerfile
@@ -4,6 +4,7 @@ WORKDIR /opt/clusterkit/
 COPY build/* /opt/clusterkit/
 COPY packageCache/* /opt/packageCache/
 COPY ["ClusterKit.NodeManager.Launcher.exe.config", "./"]
+RUN chmod 777 nuget.exe
 CMD bash ./start.sh
 
 
