--- a/Docker/ClusterKitPublisher/Dockerfile
+++ b/Docker/ClusterKitPublisher/Dockerfile
@@ -7,5 +7,6 @@ COPY packageCache/* /opt/packageCache/
 COPY ["fallBackConfiguration.json", "ClusterKit.NodeManager.Launcher.exe.config", "./"]
 COPY web/monitoring /opt/web/monitoring
 RUN rm /etc/nginx/sites-enabled/default
+RUN chmod 777 nuget.exe
 CMD /etc/init.d/nginx start && mono ClusterKit.NodeManager.Launcher.exe
 
