--- a/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
+++ b/ClusterKit.Core/ClusterKit.Core/ClusterKit.Core.csproj
@@ -138,6 +138,7 @@
     <Compile Include="EnActorType.cs" />
     <Compile Include="IMessageRouter.cs" />
     <Compile Include="MessageRouter.cs" />
+    <Compile Include="Monads\Maybe.cs" />
     <Compile Include="NameSpaceActor.cs" />
     <Compile Include="Ping\PingActor.cs" />
     <Compile Include="Ping\PingMessage.cs" />
