--- a/ClusterKit.Core/ClusterKit.Core.TestKit/packages.config
+++ b/ClusterKit.Core/ClusterKit.Core.TestKit/packages.config
@@ -1,13 +1,15 @@
 ﻿<?xml version="1.0" encoding="utf-8"?>
 <packages>
-  <package id="Akka" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.Cluster" version="1.0.8.183-beta" targetFramework="net45" />
-  <package id="Akka.Cluster.Tools" version="1.0.8.183-beta" targetFramework="net45" />
+  <package id="Akka" version="1.0.8.185-beta" targetFramework="net45" />
+  <package id="Akka.Cluster" version="1.0.8.185-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Sharding" version="1.0.8.185-beta" targetFramework="net45" />
+  <package id="Akka.Cluster.Tools" version="1.0.8.185-beta" targetFramework="net45" />
   <package id="Akka.DI.CastleWindsor" version="1.0.8.183-beta" targetFramework="net45" />
   <package id="Akka.DI.Core" version="1.0.8.183-beta" targetFramework="net45" />
   <package id="Akka.DI.TestKit" version="1.0.8.183-beta" targetFramework="net45" />
   <package id="Akka.Logger.Serilog" version="1.0.7.154-beta" targetFramework="net45" />
-  <package id="Akka.Remote" version="1.0.8.183-beta" targetFramework="net45" />
+  <package id="Akka.Persistence" version="1.0.8.185-beta" targetFramework="net45" />
+  <package id="Akka.Remote" version="1.0.8.185-beta" targetFramework="net45" />
   <package id="Akka.Serialization.Wire" version="1.0.8.183-beta" targetFramework="net45" />
   <package id="Akka.TestKit" version="1.0.8.183-beta" targetFramework="net45" />
   <package id="Akka.TestKit.Xunit2" version="1.0.8.183-beta" targetFramework="net45" />
