--- a/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
+++ b/ClusterKit.Core/ClusterKit.Core.Tests/ClusterKit.Core.Tests.csproj
@@ -184,6 +184,7 @@
     <Compile Include="ConceptProof\AkkaClusterTest.cs" />
     <Compile Include="Configuration\ConfigurationTest.cs" />
     <Compile Include="Data\ContextFactoryTest.cs" />
+    <Compile Include="Monads\MaybeTests.cs" />
     <Compile Include="Ping\PingTest.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TestUtils\CoreTestKitTests.cs" />
