--- a/Docker/ClusterKitPublisher/fallBackConfiguration.json
+++ b/Docker/ClusterKitPublisher/fallBackConfiguration.json
@@ -3,15 +3,245 @@
   "NodeTemplate": "publisher",
   "NodeTemplateVersion": 0,
   "Packages": [
-    "ClusterKit.Core.Service",
-    "ClusterKit.NodeManager.Client",
-    "ClusterKit.Web.NginxConfigurator"
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "ClusterKit.Core.Service",
+      "Version": "0.0.0.0-local"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "ClusterKit.NodeManager.Client",
+      "Version": "0.0.0.0-local"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "ClusterKit.Web.NginxConfigurator",
+      "Version": "0.0.0.0-local"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka",
+      "Version": "1.0.8.185-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka.Cluster",
+      "Version": "1.0.8.185-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka.Cluster.Sharding",
+      "Version": "1.0.8.185-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka.Cluster.Tools",
+      "Version": "1.0.8.185-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka.DI.CastleWindsor",
+      "Version": "1.0.8.183-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka.DI.Core",
+      "Version": "1.0.8.183-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka.Logger.Serilog",
+      "Version": "1.0.7.154-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka.Persistence",
+      "Version": "1.0.8.185-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka.Remote",
+      "Version": "1.0.8.185-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Akka.Serialization.Wire",
+      "Version": "1.0.8.183-beta"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Castle.Core",
+      "Version": "3.3.3"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Castle.Windsor",
+      "Version": "3.3.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "ClusterKit.Core",
+      "Version": "0.0.0.0-local"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "ClusterKit.NodeManager.Launcher.Messages",
+      "Version": "0.0.0.0-local"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "ClusterKit.Web.Client",
+      "Version": "0.0.0.0-local"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "CommonServiceLocator",
+      "Version": "1.3"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "CommonServiceLocator.WindsorAdapter",
+      "Version": "1.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Google.ProtocolBuffers",
+      "Version": "2.4.1.555"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Helios",
+      "Version": "1.4.2"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "JetBrains.Annotations",
+      "Version": "10.1.2-eap"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Microsoft.Bcl.Immutable",
+      "Version": "1.0.34"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Newtonsoft.Json",
+      "Version": "8.0.2"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Serilog",
+      "Version": "1.5.14"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "System.Collections",
+      "Version": "4.0.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "System.Collections.Immutable",
+      "Version": "1.1.37"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "System.Diagnostics.Debug",
+      "Version": "4.0.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "System.Globalization",
+      "Version": "4.0.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "System.Linq",
+      "Version": "4.0.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "System.Resources.ResourceManager",
+      "Version": "4.0.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "System.Runtime",
+      "Version": "4.0.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "System.Runtime.Extensions",
+      "Version": "4.0.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "System.Threading",
+      "Version": "4.0.0"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Topshelf",
+      "Version": "3.3.1"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Topshelf.Linux",
+      "Version": "1.0.12.11"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Topshelf.Serilog",
+      "Version": "3.3.1"
+    },
+    {
+      "BuildDate": null,
+      "Dependencies": null,
+      "Id": "Wire",
+      "Version": "0.0.6"
+    }
   ],
   "PackageSources": [
     "/opt/packageCache",
     "http://192.168.99.100:81/"
   ],
-  "RequestId": "e49705ca-9d3c-42c0-98f1-ed55fe1d7f1a",
   "Seeds": [
     "akka.tcp://ClusterKit@seed:3090"
   ]
