Missing files from the last commit

--- a/Docker/ClusterKitMonitoring/web/.gitignore
+++ b/Docker/ClusterKitMonitoring/web/.gitignore
@@ -5,3 +5,9 @@ dist/
 webpack-assets.json
 webpack-stats.json
 npm-debug.log
+!**/packages/*
+!*/packages/*
+!packages
+!**/Packages/*
+!*/Packages/*
+!Packages
